--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,4 +1,5 @@
-PassEnv PROXY_URL
+PassEnv PROXY_URL_1
+PassEnv PROXY_PATH_1
 PassEnv PORT
 
 ServerRoot "/app/apache/"
@@ -39,10 +40,13 @@ LogLevel warn
     CustomLog "logs/access_log" common
 </IfModule>
 
-ProxyRequests Off
-ProxyPass / ${PROXY_URL}
-<Location />
-    ProxyPassReverse /
-</Location>
+# ProxyRequests Off
+# ProxyPass / ${PROXY_URL}
+# <Location />
+#     ProxyPassReverse /
+# </Location>
+
+ProxyPass "${PROXY_PATH_1}"  "${PROXY_URL_1}"
+ProxyPassReverse "${PROXY_PATH_1}"  "${PROXY_URL_1}"
 
 IncludeOptional /app/conf/*.conf
