--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -46,7 +46,7 @@ LogLevel warn
 #     ProxyPassReverse /
 # </Location>
 
-ProxyPass "${PROXY_PATH_1}"  "${PROXY_URL_1}"
-ProxyPassReverse "${PROXY_PATH_1}"  "${PROXY_URL_1}"
+ProxyPass "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
+ProxyPassReverse "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
 
 IncludeOptional /app/conf/*.conf
