--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -46,6 +46,7 @@ LogLevel warn
 #     ProxyPassReverse /
 # </Location>
 
+ProxyRequests Off
 ProxyPass "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
 ProxyPassReverse "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
 
