--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -46,8 +46,14 @@ LogLevel warn
 #     ProxyPassReverse /
 # </Location>
 
-ProxyRequests Off
-ProxyPass "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
-ProxyPassReverse "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
+# ProxyRequests Off
+# ProxyPass "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
+# ProxyPassReverse "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
+
+<Location /${PROXY_PATH_1}>
+  ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
+  ProxyPassReverse ${PROXY_URL_1} 
+  RedirectMatch permanent ^/${PROXY_PATH_1}$ /${PROXY_PATH_1}/
+</Location>
 
 IncludeOptional /app/conf/*.conf
