--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -47,13 +47,13 @@ LogLevel warn
 # </Location>
 
 # ProxyRequests Off
-# ProxyPass "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
-# ProxyPassReverse "/${PROXY_PATH_1}/"  "${PROXY_URL_1}"
+# ProxyPass "/ndowe/"  "${PROXY_URL_1}"
+# ProxyPassReverse "/ndowe/"  "${PROXY_URL_1}"
 
-<Location /${PROXY_PATH_1}>
+<Location /ndowe>
   ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
   ProxyPassReverse ${PROXY_URL_1} 
-  RedirectMatch permanent ^/${PROXY_PATH_1}$ /${PROXY_PATH_1}/
+  RedirectMatch permanent ^/ndowe$ /ndowe/
 </Location>
 
 IncludeOptional /app/conf/*.conf
