--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -53,7 +53,7 @@ LogLevel warn
 <Location /ndowe>
   ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
   ProxyPassReverse ${PROXY_URL_1} 
-  RewriteRule ^/ndowe$ /ndowe/ [R=301,L]
+  RedirectMatch permanent ^/ndowe$ /ndowe/
 </Location>
 
 IncludeOptional /app/conf/*.conf
