--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -55,6 +55,7 @@ LogLevel warn
   ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
   ProxyPassReverse ${PROXY_URL_1} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
+  RewriteRule "^/ndowe$" "/ndowe/"
 </Location>
 
 IncludeOptional /app/conf/*.conf
