--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -52,6 +52,8 @@ LogLevel warn
 # ProxyPass "/ndowe/"  "${PROXY_URL_1}"
 # ProxyPassReverse "/ndowe/"  "${PROXY_URL_1}"
 
+ProxyRequests Off
+
 <Location /ndowe>
   ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
   ProxyPassReverse ${PROXY_URL_1} 
