--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -54,7 +54,7 @@ LogLevel warn
 
 ProxyRequests Off
 
-<Location /ndowe>
+<Location /ndowe/>
   ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
   ProxyPassReverse ${PROXY_URL_1} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
