--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -48,15 +48,14 @@ LogLevel warn
 #     ProxyPassReverse /
 # </Location>
 
-# ProxyRequests Off
-# ProxyPass "/ndowe/"  "${PROXY_URL_1}"
-# ProxyPassReverse "/ndowe/"  "${PROXY_URL_1}"
-
 ProxyRequests Off
+ProxyPass "/ndowe/"  "${NDOWE_URL_1}"
+ProxyPassReverse "/ndowe/"  "${NDOWE_URL_1}"
 
-<Location /ndowe/>
-  ProxyPass ${PROXY_URL_1} connectiontimeout=300 timeout=300
-  ProxyPassReverse ${PROXY_URL_1} 
+# ProxyRequests Off
+<Location /ndowe.back/>
+  ProxyPass ${NDOWE_URL_1} connectiontimeout=300 timeout=300
+  ProxyPassReverse ${NDOWE_URL_1} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
   RewriteRule "^/ndowe$" "/ndowe/"
 </Location>
