--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,5 +1,4 @@
-PassEnv PROXY_URL_1
-PassEnv PROXY_PATH_1
+PassEnv NDOWE_URL
 PassEnv PORT
 
 ServerRoot "/app/apache/"
@@ -49,13 +48,13 @@ LogLevel warn
 # </Location>
 
 ProxyRequests Off
-ProxyPass "/ndowe/"  "${NDOWE_URL_1}"
-ProxyPassReverse "/ndowe/"  "${NDOWE_URL_1}"
+ProxyPass "/ndowe/"  "${NDOWE_URL}"
+ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
 
 # ProxyRequests Off
 <Location /ndowe.back/>
-  ProxyPass ${NDOWE_URL_1} connectiontimeout=300 timeout=300
-  ProxyPassReverse ${NDOWE_URL_1} 
+  ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
+  ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
   RewriteRule "^/ndowe$" "/ndowe/"
 </Location>
