--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -48,6 +48,7 @@ LogLevel warn
 # </Location>
 
 ProxyRequests Off
+ProxyPreserveHost On
 ProxyPass "/ndowe/"  "${NDOWE_URL}"
 ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
 
