--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -49,11 +49,9 @@ LogLevel warn
 
 ProxyRequests Off
 ProxyPreserveHost On
-ProxyPass "/ndowe/"  "${NDOWE_URL}"
-ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
-
-# ProxyRequests Off
-<Location /ndowe.back/>
+# ProxyPass "/ndowe/"  "${NDOWE_URL}"
+# ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
+<Location /ndowe>
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
