--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -55,7 +55,7 @@ ProxyPreserveHost On
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
-  RewriteRule "^/ndowe$" "/ndowe/"
+  RewriteRule ^/ndowe$ /ndowe/
 </Location>
 
 IncludeOptional /app/conf/*.conf
