--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -51,11 +51,11 @@ ProxyRequests Off
 ProxyPreserveHost On
 # ProxyPass "/ndowe/"  "${NDOWE_URL}"
 # ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
-<Location /ndowe>
+<Location />
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
-  RewriteRule ^/ndowe$ /ndowe/
+  # RewriteRule ^/ndowe$ /ndowe/
 </Location>
 
 IncludeOptional /app/conf/*.conf
