--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -51,7 +51,7 @@ ProxyRequests Off
 ProxyPreserveHost On
 # ProxyPass "/ndowe/"  "${NDOWE_URL}"
 # ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
-<Location />
+<Location /ndowe>
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
