--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -54,7 +54,7 @@ ProxyPreserveHost On
 <Location /ndowe/>
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
-  # RedirectMatch permanent ^/ndowe$ /ndowe/
+  RedirectMatch permanent ^/ndowe$ /ndowe/
   # RewriteRule ^/ndowe$ /ndowe/
 </Location>
 
