--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,4 +1,5 @@
 PassEnv NDOWE_URL
+PassEnv VIRT_URL
 PassEnv PORT
 
 ServerRoot "/app/apache/"
@@ -54,8 +55,15 @@ ProxyPreserveHost On
 <Location /ndowe/>
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
-  RedirectMatch permanent ^/ndowe$ /ndowe/
+  # RedirectMatch permanent ^/ndowe$ /ndowe/
   # RewriteRule ^/ndowe$ /ndowe/
+</Location>
+
+<Location /virt/>
+  ProxyPass ${VIRT_URL} connectiontimeout=300 timeout=300
+  ProxyPassReverse ${VIRT_URL} 
+  # RedirectMatch permanent ^/virt$ /virt/
+  RewriteRule ^/virt$ /virt/
 </Location>
 
 IncludeOptional /app/conf/*.conf
