--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -63,7 +63,7 @@ ProxyPreserveHost On
   ProxyPass ${VIRT_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${VIRT_URL} 
   # RedirectMatch permanent ^/virt$ /virt/
-  RewriteRule ^/virt$ /virt/
+  # RewriteRule ^/virt$ /virt/
 </Location>
 
 IncludeOptional /app/conf/*.conf
