--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -48,11 +48,13 @@ LogLevel warn
 #     ProxyPassReverse /
 # </Location>
 
-ProxyRequests Off
-ProxyPreserveHost On
+# ProxyRequests Off
+# ProxyPreserveHost On
 # ProxyPass "/ndowe/"  "${NDOWE_URL}"
 # ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
 <Location /ndowe/>
+  ProxyRequests Off
+  ProxyPreserveHost On
   ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
@@ -60,9 +62,11 @@ ProxyPreserveHost On
 </Location>
 
 <Location /virt/>
+  ProxyRequests Off
+  ProxyPreserveHost On
   ProxyPass ${VIRT_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${VIRT_URL} 
-  # RedirectMatch permanent ^/virt$ /virt/
+  RedirectMatch permanent ^/virt$ /virt/
   # RewriteRule ^/virt$ /virt/
 </Location>
 
