--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -55,7 +55,7 @@ LogLevel warn
 <Location /ndowe/>
   ProxyRequests Off
   ProxyPreserveHost On
-  ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
+  ProxyPass ${NDOWE_URL}
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
   # RewriteRule ^/ndowe$ /ndowe/
@@ -64,9 +64,9 @@ LogLevel warn
 <Location /virt/>
   ProxyRequests Off
   ProxyPreserveHost On
-  ProxyPass ${VIRT_URL} connectiontimeout=300 timeout=300
+  ProxyPass ${VIRT_URL}
   ProxyPassReverse ${VIRT_URL} 
-  RedirectMatch permanent ^/virt$ /virt/
+  # RedirectMatch permanent ^/virt$ /virt/
   # RewriteRule ^/virt$ /virt/
 </Location>
 
