--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -53,14 +53,14 @@ ProxyPreserveHost On
 # ProxyPass "/ndowe/"  "${NDOWE_URL}"
 # ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
 <Location /ndowe/>
-  ProxyPass ${NDOWE_URL}
+  ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${NDOWE_URL} 
   # RedirectMatch permanent ^/ndowe$ /ndowe/
   # RewriteRule ^/ndowe$ /ndowe/
 </Location>
 
 <Location /virt/>
-  ProxyPass ${VIRT_URL}
+  ProxyPass ${VIRT_URL} connectiontimeout=300 timeout=300
   ProxyPassReverse ${VIRT_URL} 
   # RedirectMatch permanent ^/virt$ /virt/
   # RewriteRule ^/virt$ /virt/
