--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,5 +1,4 @@
 PassEnv NDOWE_URL
-PassEnv VIRT_URL
 PassEnv PORT
 
 ServerRoot "/app/apache/"
@@ -50,20 +49,7 @@ LogLevel warn
 
 ProxyRequests Off
 ProxyPreserveHost On
-# ProxyPass "/ndowe/"  "${NDOWE_URL}"
-# ProxyPassReverse "/ndowe/"  "${NDOWE_URL}"
-<Location /ndowe/>
-  ProxyPass ${NDOWE_URL} connectiontimeout=300 timeout=300
-  ProxyPassReverse ${NDOWE_URL} 
-  # RedirectMatch permanent ^/ndowe$ /ndowe/
-  # RewriteRule ^/ndowe$ /ndowe/
-</Location>
-
-<Location /virt/>
-  ProxyPass ${VIRT_URL} connectiontimeout=300 timeout=300
-  ProxyPassReverse ${VIRT_URL} 
-  # RedirectMatch permanent ^/virt$ /virt/
-  # RewriteRule ^/virt$ /virt/
-</Location>
+ProxyPass "/" "${NDOWE_URL}"
+ProxyPassReverse "/"  "${NDOWE_URL}"
 
 IncludeOptional /app/conf/*.conf
