--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -47,6 +47,13 @@ LogLevel warn
 #     ProxyPassReverse /
 # </Location>
 
+
+AuthUserFile /app/.htpasswd
+AuthType Basic
+AuthName "Restricted Access"
+Require valid-user
+
+
 ProxyRequests Off
 ProxyPreserveHost On
 ProxyPass "/" "${NDOWE_URL}"
