--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -23,6 +23,7 @@ LoadModule proxy_module /app/apache/modules/mod_proxy.so
 LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
 # LoadModule rewrite_module /app/apache/modules/mod_rewrite.so
 LoadModule rewrite_module /app/apache/modules/mod_rewrite.so
+LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
