--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -22,8 +22,7 @@ LoadModule env_module /app/apache/modules/mod_env.so
 LoadModule proxy_module /app/apache/modules/mod_proxy.so
 LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
 # LoadModule rewrite_module /app/apache/modules/mod_rewrite.so
-LoadModule rewrite_module /app/apache/modules/mod_rewrite.so
-LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
+# LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
@@ -47,12 +46,6 @@ LogLevel warn
 # <Location />
 #     ProxyPassReverse /
 # </Location>
-
-
-AuthUserFile /app/.htpasswd
-AuthType Basic
-AuthName "Restricted Access"
-Require valid-user
 
 
 ProxyRequests Off
