Se añade AuthBasicFake

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -1,4 +1,6 @@
-PassEnv NDOWE_URL
+PassEnv USER
+PassEnv PASSWORD
+PassEnv URL
 PassEnv PORT
 
 ServerRoot "/app/apache/"
@@ -21,8 +23,6 @@ LoadModule authz_core_module /app/apache/modules/mod_authz_core.so
 LoadModule env_module /app/apache/modules/mod_env.so
 LoadModule proxy_module /app/apache/modules/mod_proxy.so
 LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
-# LoadModule rewrite_module /app/apache/modules/mod_rewrite.so
-# LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
@@ -41,16 +41,13 @@ LogLevel warn
     CustomLog "logs/access_log" common
 </IfModule>
 
-# ProxyRequests Off
-# ProxyPass / ${PROXY_URL}
-# <Location />
-#     ProxyPassReverse /
-# </Location>
-
+<Location "/">
+    AuthBasicFake ${USER} ${PASSWORD}
+</Location>
 
 ProxyRequests Off
 ProxyPreserveHost On
-ProxyPass "/" "${NDOWE_URL}"
-ProxyPassReverse "/"  "${NDOWE_URL}"
+ProxyPass "/" "${URL}"
+ProxyPassReverse "/"  "${URL}"
 
 IncludeOptional /app/conf/*.conf
