--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -19,10 +19,10 @@ DocumentRoot "/app/www"
 
 LoadModule unixd_module /app/apache/modules/mod_unixd.so
 LoadModule authn_core_module /app/apache/modules/mod_authn_core.so
-LoadModule authz_core_module /app/apache/modules/mod_authz_core.so
 LoadModule env_module /app/apache/modules/mod_env.so
 LoadModule proxy_module /app/apache/modules/mod_proxy.so
 LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
+LoadModule auth_basic_module /app/apache/modules/mod_auth_basic.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
