/app/www/.htpasswd

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -38,6 +38,15 @@ LogLevel warn
     CustomLog "logs/access_log" common
 </IfModule>
 
+<Location />
+      AuthType Basic
+      AuthName "Authentication Required"
+      AuthUserFile "/app/www/.htpasswd"
+      Require valid-user
+      Order allow,deny
+      Allow from all
+</Location>
+    
 ProxyRequests Off
 ProxyPreserveHost On
 ProxyPass "/" "${URL}"
