authn_file_module

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -20,6 +20,7 @@ LoadModule authn_core_module /app/apache/modules/mod_authn_core.so
 LoadModule env_module /app/apache/modules/mod_env.so
 LoadModule proxy_module /app/apache/modules/mod_proxy.so
 LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
+LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
