--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -21,6 +21,7 @@ LoadModule env_module /app/apache/modules/mod_env.so
 LoadModule proxy_module /app/apache/modules/mod_proxy.so
 LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
 LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
+LoadModule authz_core_module /app/apache/modules/mod_authz_core.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
