--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -40,14 +40,11 @@ LogLevel warn
     CustomLog "logs/access_log" common
 </IfModule>
 
-<Location />
-      AuthType Basic
-      AuthName "Authentication Required"
-      AuthUserFile "/app/www/.htpasswd"
-      Require valid-user
-      Order allow,deny
-      Allow from all
-</Location>
+<IfModule mod_authz_core.c>
+	<RequireAll>
+		Require all granted
+	</RequireAll>
+</IfModule>
     
 ProxyRequests Off
 ProxyPreserveHost On
