--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -40,8 +40,13 @@ LogLevel warn
     CustomLog "logs/access_log" common
 </IfModule>
 
-<IfModule mod_authz_core.c>
-    Require all granted
+<IfModule authz_core_module>    
+      AuthType Basic
+      AuthName "Authentication Required"
+      AuthUserFile "/app/www/.htpasswd"
+      Require valid-user
+      Order allow,deny
+      Allow from all
 </IfModule>
     
 ProxyRequests Off
