--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -40,14 +40,14 @@ LogLevel warn
     CustomLog "logs/access_log" common
 </IfModule>
 
-<IfModule authz_core_module>    
-      AuthType Basic
-      AuthName "Authentication Required"
-      AuthUserFile "/app/www/.htpasswd"
-      Require valid-user
-      Order allow,deny
-      Allow from all
-</IfModule>
+<Location />
+            Deny from all
+            AuthUserFile /app/www/.htpasswd
+            AuthName authorization
+            AuthType Basic
+            Satisfy Any 
+            require valid-user
+</Location>
     
 ProxyRequests Off
 ProxyPreserveHost On
