--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -45,4 +45,12 @@ ProxyPreserveHost On
 ProxyPass "/" "${URL}"
 ProxyPassReverse "/"  "${URL}"
 
+<Location />
+  AuthType Basic
+  AuthName "Wrapper auth"
+  AuthBasicProvider file
+  AuthUserFile "/app/.htpasswd"
+  Require valid-user
+</Location>
+
 IncludeOptional /app/conf/*.conf
