--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -23,6 +23,7 @@ LoadModule proxy_http_module /app/apache/modules/mod_proxy_http.so
 LoadModule authn_file_module /app/apache/modules/mod_authn_file.so
 LoadModule authz_core_module /app/apache/modules/mod_authz_core.so
 LoadModule auth_basic_module /app/apache/modules/mod_auth_basic.so
+LoadModule authz_user_module /app/apache/modules/mod_authz_user.so
 
 Include /app/apache/conf/extra/httpd-mpm.conf
 
